# monotone-gradient-networks

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_sanity_check_trivial.ipynb  02_toy_2d_mapping.ipynb  03_color_adaptation_cmgn.ipynb  03_color_adaptation_mmgn.ipynb  04_mnist_generation.ipynb
src/monotone_grad_nets/: __init__.py
src/monotone_grad_nets/models/: __init__.py  cmgn.py  icgn.py  icnn.py  mmgn.py
src/monotone_grad_nets/trainers/: trainer.py
src/monotone_grad_nets/utils/: plotting.py  verification.py
tests/: test_losses.py  test_models.py  test_scheduler.py  test_trainer.py  test_trainer_optimization.py  test_trainer_robustness.py
