[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monotone_grad_nets"
version = "0.1.0"
description = "Learning Gradients of Convex Functions with Monotone Gradient Networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "matplotlib",
    "tqdm",
    "geomloss",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]
